--- a/Commander/lifecounter.css
+++ b/Commander/lifecounter.css
@@ -9,13 +9,6 @@
     --nav-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
-::after,
-::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
     background-color: var(--main-bg-color);
     font-family: var(--font-family);
@@ -58,7 +51,6 @@ nav {
     background: var(--clr-white);
     height: 100px;
     box-shadow: var(--nav-shadow);
-
     position: fixed;
     top: 0;
     left: 0;
@@ -66,22 +58,17 @@ nav {
     z-index: 100;
 }
 .nav-center {
-    top: 0;
-    left: 0;
-    right: 0;
-
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    position: fixed;
 }
-.nav-toggle {
+/* .nav-toggle {
     font-size: 1.5rem;
     background: lightgray;
     border-color: transparent;
     transition: var(--transition);
     cursor: pointer;
-}
+} */
 
 ul {
     list-style-type: none;
@@ -92,21 +79,21 @@ li {
 }
 
 /* LINKS */
-.nav-toggle {
+/* .nav-toggle {
     font-size: 1.5rem;
     color: var(--clr-primary-5);
     background: transparent;
     border-color: transparent;
     transition: var(--transition);
     cursor: pointer;
-}
-.nav-toggle:hover {
+} */
+/* .nav-toggle:hover {
     color: var(--clr-primary-1);
     transform: rotate(90deg);
-}
+} */
 
 .links a {
-    color: var(--clr-grey-3);
+    color: black;
     font-size: 1rem;
     text-transform: capitalize;
     letter-spacing: var(--spacing);
@@ -121,19 +108,18 @@ li {
 .links a:hover {
     background: var(--clr-primary-8);
     color: var(--clr-primary-5);
-    padding-left: 1.5rem;
 }
 
-.links {
+/* .links {
     height: 0;
     overflow: hidden;
     transition: var(--transition);
     padding: 0;
-}
-.show-links {
+} */
+/* .show-links {
     height: 10rem;
     position: fixed;
-}
+}  */
 
 @media screen and (min-width: 800px) {
     .nav-center {
@@ -147,9 +133,9 @@ li {
     .nav-header {
         padding: 0;
     }
-    .nav-toggle {
+    /* .nav-toggle {
         display: none;
-    }
+    } */
     .links {
         height: auto;
         display: flex;
