--- a/Commander/ContactUs.css
+++ b/Commander/ContactUs.css
@@ -15,12 +15,6 @@ body {
     margin-top: 150px;
 }
 
-p,
-h2,
-h4 {
-    text-align: center;
-}
-
 .img-container {
     text-align: center;
 }
@@ -114,19 +108,48 @@ li {
     opacity: 0.6;
 }
 
-/* LIFE COUNTER */
-.grid {
-    max-width: 620px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    margin: auto;
+/* Contact Us Form*/
+
+h1 {
+    text-align: center;
+    text-transform: capitalize;
+}
+h4 {
+    text-align: center;
 }
 
-.btn-counter-container {
+.center {
+    max-width: 620px;
+    margin: auto;
+    background-color: rgb(206, 219, 223);
+    height: 500px;
+    padding: 10px;
+    border-radius: 10px;
+    border-style: solid;
+}
+.name {
+    text-align: left;
+    max-width: 200 px;
+    margin: auto;
+    width: 70%;
+    padding-top: 10px;
+}
+
+.input-bar {
+    width: 100%;
+}
+.textarea {
+    width: 100%;
+    height: 50px;
+}
+
+.submit-btn {
+    margin-top: 20px;
     display: flex;
     justify-content: center;
 }
-.scoreboard {
-    text-align: center;
+
+button {
+    font-size: 18px;
+    cursor: pointer;
 }
