--- a/Commander/lifecounter.css
+++ b/Commander/lifecounter.css
@@ -1,5 +1,5 @@
 :root {
-    --main-bg-color: hsl(35, 52%, 87%);
+    --main-bg-color: #ebf5ee;
     --font-family: arial;
     --transition: all 0.3s linear;
     --clr-darkblue: hsl(205, 78%, 60%);
